Endpoint from /recipes & new info in swagger
