# swagger-output.json
@@ -13,6 +13,10 @@
   "paths": {
     "/recipes/": {
       "get": {
+        "tags": [
+          "Recipes"
+        ],
+        "summary": "To get AI generated recipes",
         "description": "",
         "parameters": [
           {
@@ -27,12 +31,18 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not found"
           }
         }
       }
     },
     "/ingredients/": {
       "post": {
+        "tags": [
+          "Ingredients"
+        ],
         "description": "",
         "parameters": [
           {
@@ -54,6 +64,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Ingredients"
+        ],
         "description": "",
         "parameters": [
           {
@@ -77,6 +90,9 @@
     },
     "/ingredients/{id}": {
       "patch": {
+        "tags": [
+          "Ingredients"
+        ],
         "description": "",
         "parameters": [
           {
@@ -104,6 +120,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Ingredients"
+        ],
         "description": "",
         "parameters": [
           {
@@ -133,6 +152,9 @@
     },
     "/users/login": {
       "post": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -174,6 +196,9 @@
     },
     "/users/register": {
       "post": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
